--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Build
       run: npm ci
     - name: Test
-      run: npm test > test.dat | true
+      run: npm test || true
     - name: Archive code coverage results
       uses: actions/upload-artifact@v1
       with:
