--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "jest": {
     "preset": "@testing-library/react-native",
-    "setupFiles": [
+    "setupFilesAfterEnv": [
       "jest-expo/jest-preset.js",
       "@testing-library/react-native/jest-preset",
       "./node_modules/react-native-gesture-handler/jestSetup.js",
       "<rootDir>/jest.setup.ts"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|@aws-sdk|aws-amplify-react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+      "node_modules/(?!(jest-)?react-native|aws-amplify-react-native|@aws-sdk|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
@@ -42,7 +42,8 @@
       "js",
       "json",
       "jsx",
-      "node"
+      "node",
+      "mjs"
     ]
   },
   "dependencies": {
@@ -61,12 +62,13 @@
     "@types/react-test-renderer": "^16.9.2",
     "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
+    "asset": "^0.4.13",
     "aws-amplify": "^3.0.5",
     "aws-amplify-react-native": "^4.0.4",
     "aws-sdk": "^2.640.0",
     "babel-preset-expo": "^8.1.0",
     "emotion-theming": "^10.0.27",
-    "expo": "^37.0.0",
+    "expo": "^37.0.8",
     "jquery": "^3.4.1",
     "moment": "^2.15.2",
     "native-base": "2.13.8",
@@ -101,21 +103,23 @@
   "private": true,
   "devDependencies": {
     "@aws-amplify/cli": "^4.18.0",
-    "@expo/webpack-config": "^0.11.18",
+    "@babel/core": "^7.9.6",
+    "@expo/webpack-config": "^0.12.3",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/react": "^10.0.3",
     "@testing-library/react-native": "^5.0.3",
     "@testing-library/user-event": "^10.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest-fetch-mock": "^3.0.3",
-    "node-fetch": "^2.6.0",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.15",
+    "babel-jest": "^25.5.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "expo-cli": "^3.17.16",
+    "expo-cli": "^3.20.0",
+    "isomorphic-fetch": "^2.2.1",
     "jest-expo": "^37.0.0",
+    "jest-fetch-mock": "^3.0.3",
     "module-to-cdn": "^3.1.5",
+    "node-fetch": "^2.6.0",
     "react-test-renderer": "^16.13.1",
     "readline": "^1.3.0",
     "webpack-bundle-analyzer": "^3.6.1",
