--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "react-native-calendars": "^1.264.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "^0.27.1",
+    "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
