--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/netinfo": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "@sentry/react-native": "^1.3.7",
     "@testing-library/jest-dom": "^5.5.0",
     "@types/googlemaps": "^3.39.3",
     "@types/jest": "^25.2.1",
