--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "aws-sdk": "^2.640.0",
     "babel-preset-expo": "^8.1.0",
     "emotion-theming": "^10.0.27",
-    "expo": "^37.0.8",
+    "expo": "^37.0.9",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.4.1",
     "moment": "^2.15.2",
@@ -102,13 +102,14 @@
     "react-places-autocomplete": "^7.2.1",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
+    "sentry-expo": "^2.0.4",
     "typescript": "^3.8.3"
   },
   "private": true,
   "devDependencies": {
-    "@aws-amplify/cli": "^4.18.1",
+    "@aws-amplify/cli": "^4.19.0",
     "@babel/core": "^7.9.6",
-    "@expo/webpack-config": "^0.12.3",
+    "@expo/webpack-config": "^0.12.4",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/react": "^10.0.3",
     "@testing-library/react-native": "^5.0.3",
@@ -118,7 +119,7 @@
     "babel-jest": "^25.5.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "expo-cli": "^3.20.0",
+    "expo-cli": "^3.20.3",
     "isomorphic-fetch": "^2.2.1",
     "jest-expo": "^37.0.0",
     "jest-fetch-mock": "^3.0.3",
