--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "emotion-theming": "^10.0.27",
     "expo": "^37.0.9",
     "google-maps-react": "^2.0.6",
+    "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
     "moment": "^2.15.2",
     "native-base": "2.13.8",
