--- a/package.json
+++ b/package.json
@@ -12,38 +12,43 @@
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1"
   },
   "jest": {
-    "preset": "@testing-library/react-native",
-    "setupFilesAfterEnv": [
-      "jest-expo/jest-preset.js",
-      "@testing-library/react-native/jest-preset",
-      "./node_modules/react-native-gesture-handler/jestSetup.js",
-      "<rootDir>/jest.setup.ts"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|@sentry|sentry-expo|Linking|aws-amplify-react-native|@aws-sdk|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less|scss|sass)$": "<rootDir>/__mocks__/styleMock.js"
-    },
-    "testEnvironment": "jsdom",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/*.{ts,tsx}",
-      "!**/coverage/**",
-      "!**/node_modules/**",
-      "!**/babel.config.js",
-      "!**/jest.setup.js"
-    ],
-    "coverageDirectory": "coverage",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json",
-      "jsx",
-      "node",
-      "mjs"
+    "projects": [
+      {
+        "displayName": "native",
+        "preset": "@testing-library/react-native",
+        "setupFilesAfterEnv": [
+          "jest-expo/jest-preset.js",
+          "@testing-library/react-native/jest-preset",
+          "./node_modules/react-native-gesture-handler/jestSetup.js",
+          "<rootDir>/jest.setup.ts"
+        ],
+        "transformIgnorePatterns": [
+          "node_modules/(?!(jest-)?react-native|@sentry|sentry-expo|Linking|aws-amplify-react-native|@aws-sdk|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+        ],
+        "moduleNameMapper": {
+          "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+          "\\.(css|less|scss|sass)$": "<rootDir>/__mocks__/styleMock.js"
+        },
+        "testEnvironment": "jsdom",
+        "collectCoverage": true,
+        "collectCoverageFrom": [
+          "**/*.{ts,tsx}",
+          "!**/coverage/**",
+          "!**/node_modules/**",
+          "!**/babel.config.js",
+          "!**/jest.setup.js"
+        ],
+        "coverageDirectory": "coverage",
+        "moduleFileExtensions": [
+          "ts",
+          "tsx",
+          "js",
+          "json",
+          "jsx",
+          "node",
+          "mjs"
+        ]
+      }
     ]
   },
   "dependencies": {
@@ -119,7 +124,6 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.20.3",
     "isomorphic-fetch": "^2.2.1",
-    "jest-expo": "^37.0.0",
     "jest-fetch-mock": "^3.0.3",
     "module-to-cdn": "^3.1.5",
     "node-fetch": "^2.6.0",
