--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "@material-ui/core": "^4.9.8",
     "@material-ui/pickers": "^3.2.10",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "^5.6.2",
+    "@react-native-community/netinfo": "^5.8.1",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@sentry/react-native": "^1.3.7",
     "@testing-library/jest-dom": "^5.5.0",
@@ -113,26 +113,26 @@
     "aws-sdk": "^2.640.0",
     "babel-preset-expo": "^8.1.0",
     "emotion-theming": "^10.0.27",
-    "expo": "^37.0.9",
+    "expo": "^37.0.0",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
     "moment": "^2.15.2",
-    "native-base": "2.13.8",
+    "native-base": "^2.13.12",
     "react": "^16.13.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-calendars": "^1.264.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "^0.27.1",
+    "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
     "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "~2.2.0",
     "react-native-scripts": "^2.0.1",
@@ -152,18 +152,19 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@expo/webpack-config": "^0.12.4",
+    "@expo/webpack-config": "^0.12.5",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@testing-library/react": "^10.0.3",
     "@testing-library/react-native": "^5.0.3",
     "@testing-library/user-event": "^10.1.0",
     "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.15",
-    "babel-jest": "^25.5.1",
+    "@types/react-native": "^0.62.7",
+    "babel-jest": "^26.0.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.20.3",
     "isomorphic-fetch": "^2.2.1",
+    "jest-expo": "^37.0.0",
     "jest-fetch-mock": "^3.0.3",
     "module-to-cdn": "^3.1.5",
     "node-fetch": "^2.6.0",
