--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@zoomus/websdk": "^1.7.2",
     "Dante2": "^0.5.0-rc25",
     "asset": "^0.4.13",
-    "aws-amplify": "^3.0.5",
-    "aws-amplify-react-native": "^4.0.4",
-    "aws-sdk": "^2.640.0",
+    "aws-amplify": "^3.0.12-unstable.3",
+    "aws-amplify-react-native": "^4.1.3-unstable.3",
+    "aws-sdk": "^2.678.0",
     "babel-preset-expo": "^8.1.0",
     "emotion-theming": "^10.0.27",
     "expo": "^37.0.0",
