--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@cypress/code-coverage": "^3.7.4",
     "@cypress/webpack-preprocessor": "^5.2.1",
     "@expo/webpack-config": "^0.12.5",
     "@sentry/cli": "^1.52.3",
@@ -85,11 +86,15 @@
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.62.7",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "cypress": "^4.5.0",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.20.3",
+    "istanbul": "^0.4.5",
     "module-to-cdn": "^3.1.5",
     "node-fetch": "^2.6.0",
+    "nyc": "^15.0.1",
     "react-test-renderer": "^16.13.1",
     "readline": "^1.3.0",
     "start-server-and-test": "^1.11.0",
