--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "cypress": "^4.5.0",
+    "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.20.3",
     "istanbul": "^0.4.5",
