--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@material-ui/pickers": "^3.2.10",
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/netinfo": "^5.8.1",
+    "@react-navigation/drawer": "^5.7.7",
+    "@react-navigation/native": "^5.4.2",
+    "@react-navigation/stack": "^5.3.9",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@sentry/react-native": "^1.3.7",
     "@testing-library/jest-dom": "^5.5.0",
