--- a/package.json
+++ b/package.json
@@ -27,19 +27,14 @@
     "@react-navigation/stack": "^5.3.9",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@sentry/react-native": "^1.3.7",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@types/googlemaps": "^3.39.3",
-    "@types/react-test-renderer": "^16.9.2",
     "@zoomus/websdk": "^1.7.2",
-    "Dante2": "^0.5.0-rc25",
     "asset": "^0.4.13",
     "aws-amplify": "^3.0.12-unstable.3",
     "aws-amplify-react-native": "^4.1.3-unstable.3",
-    "aws-sdk": "^2.678.0",
     "babel-preset-expo": "^8.1.0",
+    "draft-js": "^0.11.5",
     "emotion-theming": "^10.0.27",
     "expo": "^37.0.0",
-    "file-api": "^0.10.4",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
@@ -65,42 +60,33 @@
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
-    "react-navigation": "^4.3.1",
-    "react-navigation-drawer": "^2.4.4",
-    "react-navigation-stack": "^2.3.1",
-    "react-navigation-tabs": "^2.8.4",
     "react-places-autocomplete": "^7.2.1",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sentry-expo": "^2.0.4",
-    "typescript": "^3.8.3"
+    "sentry-expo": "^2.0.4"
   },
   "private": true,
   "devDependencies": {
+    "aws-sdk": "^2.678.0",
+    "@types/googlemaps": "^3.39.3",
+    "typescript": "^3.8.3",
     "@babel/core": "^7.9.6",
     "@cypress/code-coverage": "^3.7.4",
     "@cypress/webpack-preprocessor": "^5.2.1",
     "@expo/webpack-config": "^0.12.5",
     "@sentry/cli": "^1.52.3",
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@testing-library/react": "^10.0.3",
-    "@testing-library/react-native": "^5.0.3",
-    "@testing-library/user-event": "^10.1.0",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.62.7",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "cypress": "^4.5.0",
+    "cypress": "4.5.0",
     "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "expo-cli": "^3.20.3",
-    "istanbul": "^0.4.5",
     "module-to-cdn": "^3.1.5",
-    "node-fetch": "^2.6.0",
     "nyc": "^15.0.1",
-    "react-test-renderer": "^16.13.1",
-    "readline": "^1.3.0",
     "start-server-and-test": "^1.11.0",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
