--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aws-amplify-react-native": "^4.1.3-unstable.3",
     "babel-preset-expo": "^8.1.0",
     "draft-js": "^0.11.5",
+    "draft-js-export-html": "^1.4.1",
     "emotion-theming": "^10.0.27",
     "expo": "^37.0.0",
     "google-maps-react": "^2.0.6",
