--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@sentry/react-native": "^1.3.7",
     "@zoomus/websdk": "^1.7.2",
     "asset": "^0.4.13",
-    "aws-amplify": "^3.0.12-unstable.3",
-    "aws-amplify-react-native": "^4.1.3-unstable.3",
+    "aws-amplify": "^3.0.13",
+    "aws-amplify-react-native": "^4.2.0",
     "babel-preset-expo": "^8.1.0",
     "draft-js": "^0.11.5",
     "draft-js-export-html": "^1.4.1",
@@ -68,27 +68,27 @@
   },
   "private": true,
   "devDependencies": {
-    "aws-sdk": "^2.678.0",
-    "@types/googlemaps": "^3.39.3",
-    "typescript": "^3.8.3",
-    "@babel/core": "^7.9.6",
+    "@babel/core": "^7.10.1",
     "@cypress/code-coverage": "^3.7.4",
     "@cypress/webpack-preprocessor": "^5.2.1",
-    "@expo/webpack-config": "^0.12.5",
+    "@expo/webpack-config": "^0.12.11",
     "@sentry/cli": "^1.52.3",
     "@sheerun/mutationobserver-shim": "^0.3.3",
+    "@types/googlemaps": "^3.39.3",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.62.7",
+    "aws-sdk": "^2.678.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "cypress": "4.5.0",
     "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "expo-cli": "^3.20.3",
+    "expo-cli": "^3.21.3",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.0.1",
     "start-server-and-test": "^1.11.0",
+    "typescript": "^3.8.3",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
