--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cy:run": "cypress run",
     "android": "npx expo start --android",
     "ios": "npx expo start --ios",
+    "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "eject": "npx expo eject",
     "test": "START_SERVER_AND_TEST_INSECURE=1 start-server-and-test start:web http://localhost:19006 cy:open",
     "backup": "export z=$(date +%Y%m%d%H%M%S); mkdir backup/$z; cd backup/$z; dynamodump export-all-data --region=us-east-1"
@@ -77,6 +78,8 @@
     "@types/googlemaps": "^3.39.3",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.62.7",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "aws-sdk": "^2.678.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
@@ -84,6 +87,8 @@
     "cypress": "4.5.0",
     "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
+    "eslint": "^7.1.0",
+    "eslint-plugin-react": "^7.20.0",
     "expo-cli": "^3.21.3",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.0.1",
