--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "@date-io/moment": "^1.3.13",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
-    "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/netinfo": "^5.9.2",
-    "@react-navigation/drawer": "^5.8.2",
-    "@react-navigation/native": "^5.5.1",
-    "@react-navigation/stack": "^5.5.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.3",
+    "@react-navigation/drawer": "^5.8.3",
+    "@react-navigation/native": "^5.6.0",
+    "@react-navigation/stack": "^5.6.0",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@sentry/react-native": "^1.4.5",
     "@zoomus/websdk": "^1.7.8",
     "asset": "^0.4.13",
-    "aws-amplify": "^3.0.16",
-    "aws-amplify-react-native": "^4.2.0",
-    "babel-preset-expo": "^8.1.0",
+    "aws-amplify": "^3.0.18",
+    "aws-amplify-react-native": "^4.2.1",
+    "babel-preset-expo": "^8.2.3",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "emotion-theming": "^10.0.27",
@@ -40,7 +40,7 @@
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
-    "moment": "^2.15.2",
+    "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "native-base": "^2.13.12",
     "react": "^16.13.1",
@@ -49,16 +49,16 @@
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-calendars": "^1.289.0",
+    "react-native-calendars": "^1.300.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "^0.7.3",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^3.0.6",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "~2.2.0",
+    "react-native-screens": "^2.9.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
     "react-native-web": "^0.11.7",
@@ -70,33 +70,33 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "^7.10.3",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.2.1",
-    "@expo/webpack-config": "^0.12.12",
+    "@expo/webpack-config": "^0.12.16",
     "@sentry/cli": "^1.54.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "@types/googlemaps": "^3.39.3",
-    "@types/react": "^16.9.11",
+    "@types/googlemaps": "^3.39.8",
+    "@types/react": "^16.9.41",
     "@types/react-native": "^0.62.13",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "aws-sdk": "^2.691.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "aws-sdk": "^2.704.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "cypress": "4.5.0",
     "cypress-file-upload": "^3.5.3",
     "dynamic-cdn-webpack-plugin": "^5.0.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^3.21.5",
+    "expo-cli": "^3.21.10",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.0",
     "typescript": "^3.9.5",
     "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2"
   }
 }
