--- a/amplify/backend/function/jcUpdateMainUserGroup/src/package.json
+++ b/amplify/backend/function/jcUpdateMainUserGroup/src/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "aws-amplify": "^3.0.18",
     "axios": "^0.19.2",
     "graphql": "^15.2.0",
-    "graphql-tag": "^2.10.3"
+    "graphql-tag": "^2.10.3",
+    "node-fetch": "^2.6.0"
   }
 }
