--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment-timezone": "^0.5.31",
     "native-base": "^2.13.12",
     "react": "^16.13.1",
+    "react-chips": "^0.8.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
