--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-web": "^0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-places-autocomplete": "^7.2.1",
+    "react-tooltip": "^4.2.7",
     "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
     "sentry-expo": "^2.1.2"
