--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^5.9.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.2",
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
@@ -36,33 +36,33 @@
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "emotion-theming": "^10.0.27",
-    "expo": "^37.0.0",
+    "expo": "^38.0.0",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "native-base": "^2.13.12",
-    "react": "^16.13.1",
+    "react": "16.11.0",
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.14.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "16.11.0",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-calendars": "^1.300.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "0.26.1",
+    "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^3.0.6",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "^2.9.0",
+    "react-native-screens": "~2.9.0",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "~0.11.7",
     "react-native-web-maps": "^0.2.0",
     "react-places-autocomplete": "^7.2.1",
     "react-tooltip": "^4.2.7",
@@ -79,8 +79,8 @@
     "@sentry/cli": "^1.54.0",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "^16.9.41",
-    "@types/react-native": "^0.62.13",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "aws-sdk": "^2.704.0",
@@ -92,11 +92,11 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^3.21.13",
+    "expo-cli": "^3.22.1",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.0",
-    "typescript": "^3.9.5",
+    "typescript": "~3.9.5",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^4.2.2"
