--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.13",
-    "@emotion/core": "^10.0.28",
+    "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
@@ -27,11 +27,11 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@react-navigation/web": "^1.0.0-alpha.9",
-    "@sentry/react-native": "^1.4.5",
+    "@sentry/react-native": "^1.7.2",
     "@zoomus/websdk": "^1.7.8",
     "asset": "^0.4.13",
-    "aws-amplify": "^3.0.23",
-    "aws-amplify-react-native": "^4.2.4",
+    "aws-amplify": "^3.0.24",
+    "aws-amplify-react-native": "^4.2.5",
     "babel-preset-expo": "^8.2.3",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
@@ -43,10 +43,10 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "native-base": "^2.13.12",
-    "react": "16.11.0",
+    "react": "^16.13.1",
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.14.1",
-    "react-dom": "16.11.0",
+    "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -73,17 +73,17 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.10.3",
+    "@babel/core": "^7.11.4",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.2.1",
-    "@expo/webpack-config": "^0.12.16",
-    "@sentry/cli": "^1.54.0",
+    "@expo/webpack-config": "^0.12.26",
+    "@sentry/cli": "^1.55.2",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "~16.9.41",
+    "@types/react": "^16.9.48",
     "@types/react-native": "~0.62.13",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "aws-sdk": "^2.704.0",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
@@ -93,13 +93,13 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^3.24.0",
+    "expo-cli": "^3.25.0",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.0",
-    "typescript": "~3.9.5",
+    "typescript": "^4.0.2",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^5.1.2"
   }
 }
