--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.10.2",
     "@material-ui/pickers": "^3.2.10",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.2",
+    "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
@@ -32,37 +33,39 @@
     "asset": "^0.4.13",
     "aws-amplify": "^3.0.24",
     "aws-amplify-react-native": "^4.2.5",
-    "babel-preset-expo": "^8.2.3",
+    "babel-preset-expo": "^8.3.0",
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "emotion-theming": "^10.0.27",
-    "expo": "^38.0.0",
+    "expo": "^39.0.3",
+    "expo-camera": "~9.0.0",
+    "expo-permissions": "~9.3.0",
     "google-maps-react": "^2.0.6",
     "is-absolute-url": "^3.0.3",
     "jquery": "^3.4.1",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "native-base": "^2.13.12",
-    "react": "^16.13.1",
+    "native-base": "^2.13.1",
+    "react": "16.13.1",
     "react-chips": "^0.8.0",
     "react-datepicker": "^2.14.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-google-maps": "^9.4.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-calendars": "^1.300.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-safe-area-view": "^1.0.0",
-    "react-native-screens": "~2.9.0",
+    "react-native-screens": "~2.10.1",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "~0.13.7",
     "react-native-web-maps": "^0.2.0",
     "react-places-autocomplete": "^7.2.1",
     "react-tooltip": "^4.2.7",
@@ -76,12 +79,12 @@
     "@babel/core": "^7.11.4",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.2.1",
-    "@expo/webpack-config": "^0.12.26",
+    "@expo/webpack-config": "^0.12.16",
     "@sentry/cli": "^1.55.2",
     "@sheerun/mutationobserver-shim": "^0.3.3",
     "@types/googlemaps": "^3.39.8",
-    "@types/react": "^16.9.48",
-    "@types/react-native": "~0.62.13",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "aws-sdk": "^2.704.0",
@@ -93,11 +96,11 @@
     "dynamic-cdn-webpack-plugin": "^5.0.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
-    "expo-cli": "^3.25.0",
+    "expo-cli": "^3.27.12",
     "module-to-cdn": "^3.1.5",
     "nyc": "^15.1.0",
     "start-server-and-test": "^1.11.0",
-    "typescript": "^4.0.2",
+    "typescript": "~3.9.2",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.1.2"
