--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-calendars": "^1.300.0",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-progress-wheel": "^1.0.5",
@@ -65,7 +65,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-scripts": "^2.0.1",
     "react-native-tags-input": "^1.0.7",
-    "react-native-web": "~0.13.7",
+    "react-native-web": "^0.13.15",
     "react-native-web-maps": "^0.2.0",
     "react-places-autocomplete": "^7.2.1",
     "react-tooltip": "^4.2.7",
