Message board alert improvements

--- a/amplify/backend/function/jcProcessDMAlerts/src/package.json
+++ b/amplify/backend/function/jcProcessDMAlerts/src/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-sdk": "^2.734.0"
+    "aws-sdk": "^2.734.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
