Changes and updates for dm's

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -57,6 +57,14 @@
       "service": "Lambda",
       "dependsOn": [
         {
+          "category": "api",
+          "resourceName": "jcmobile",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        },
+        {
           "category": "analytics",
           "resourceName": "jcmobile",
           "attributes": [
