--- a/amplify/backend/function/jcProcessDMAlerts/src/package.json
+++ b/amplify/backend/function/jcProcessDMAlerts/src/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "^2.734.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
+    "graphql-tag": "^2.11.0",
     "html-to-text": "^5.1.1",
     "node-fetch": "^2.6.1",
     "react": "^16.13.1",
