--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo build:web;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e beta;",
     "start": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start",
     "start:web": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;npx expo start:web",
+    "buildExpo": "export SENTRY_ORG=the-meeting-house;VERSION=`sentry-cli releases propose-version`;sentry-cli releases new -p jesus-collective $VERSION;sentry-cli releases set-commits --auto $VERSION;echo export const version ={git:\\\"$VERSION\\\"}>src/version.js;expo build:ios -t archive;expo build:android -t apk;sentry-cli releases finalize $VERSION;sentry-cli releases deploys $VERSION new -e prod;",
     "debug": "npx expo start",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
