Messages alerts from groups/event/etc.

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -73,6 +73,29 @@
           ]
         }
       ]
+    },
+    "jcProcessMessageAlerts": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "jcmobile",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        },
+        {
+          "category": "analytics",
+          "resourceName": "jcmobile",
+          "attributes": [
+            "Id",
+            "Region"
+          ]
+        }
+      ]
     }
   },
   "auth": {
