--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
+    "react-native-modal-overlay": "^1.3.1",
     "react-native-progress-wheel": "^1.0.5",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
