--- a/amplify/backend/function/jcmobileStripWebhook/src/package.json
+++ b/amplify/backend/function/jcmobileStripWebhook/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jcmobileStripWebhook",
+  "name": "jcmobile-strip-webhook",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
