--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,19 @@
     "noImplicitThis": true,
     "module": "commonjs",
     "outDir": "./output",
-    "target": "es6",
-    "jsx": "react",
+    "target": "ES6",
+    "jsx": "react-native",
     "alwaysStrict": true,
     "allowJs": true,
     "checkJs": true,
     "strict": true,
-    "lib": ["es6"],
+    "moduleResolution": "node",
+    "lib":  ["dom", "esnext"],
     "typeRoots": ["node_modules/@types"],
-    "types": ["node", "react","react-native"],
-    "resolveJsonModule": true
+    "types": ["node", "react"],
+    "resolveJsonModule": true,
+    "noEmit": true,
+    "skipLibCheck": true
   },
   "exclude": [
     "amplify",
