--- a/package.json
+++ b/package.json
@@ -84,21 +84,20 @@
   },
   "private": true,
   "devDependencies": {
-    "@types/draft-js": "^0.10.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-native-calendars": "^1.20.10",
-    "@types/react-places-autocomplete": "^7.2.6",
-    "@types/uuid": "^8.3.0",
     "@babel/core": "^7.11.4",
     "@cypress/code-coverage": "^3.8.1",
     "@cypress/webpack-preprocessor": "^5.2.1",
     "@expo/webpack-config": "^0.12.16",
     "@sentry/cli": "^1.55.2",
     "@sheerun/mutationobserver-shim": "^0.3.3",
+    "@types/draft-js": "^0.10.44",
     "@types/googlemaps": "^3.39.8",
     "@types/react": "~16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.0",
-    "@types/react-native": "~0.63.2",
+    "@types/react-native": "^0.63.42",
+    "@types/react-places-autocomplete": "^7.2.6",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "aws-sdk": "^2.704.0",
